--- a/index.html
+++ b/index.html
@@ -26,14 +26,32 @@
                     </ul>
                 </nav>
             </header>
-            <div class="jumbotron"></div>
+            <!-- banner -->
+            <div class="jumbotron">
+                <div class="layover">
+                    <div class="text-inside">
+                        <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit.</h2>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eveniet voluptate, voluptates magnam illo voluptatum veritatis totam obcaecati rem unde laudantium, natus ab nam, libero vitae? Inventore accusamus, ab nostrum temporibus qui enim tempore cum debitis nihil obcaecati itaque. Aspernatur rerum, blanditiis ex quidem ullam reprehenderit illo aut in et dicta.</p>
+                    </div>
+                </div>
+            </div>
+             <!-- /banner -->
             <!-- /intestazione della pagina -->
 
             <!-- sezione principale -->
             <main>
                 <div class="container2 clearfix">
-                    <section class="top"></section>
-                    <section class="left"></section>
+                    <!-- sezione titolo -->
+                    <section class="top">
+                        <div class="title">
+                            <h2 class="black-text">Leadership</h2>
+                        <p class="gray-text">Lorem ipsum dolor sit amet.</p>
+                        </div>
+                        </section>
+                    <!-- /sezione titolo -->
+                    <section class="left">
+                        
+                    </section>
                     <section class="middle"></section>
                     <section class="right"></section>
                 </div>
