--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="preconnect" href="https://fonts.gstatic.com">
+        <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="css/style.css">
         <title>Tema Wordpress</title>
     </head>
@@ -47,27 +49,26 @@
                             <h2 class="black-text">Leadership</h2>
                         <p class="gray-text">Lorem ipsum dolor sit amet.</p>
                         </div>
-                        </section>
+                    </section>
                     <!-- /sezione titolo -->
-                    <section class="left">
+                    <aside class="left">
                         <div class="content">
                             <h3>Lorem.</h3>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Est ea magni aliquid at, in nisi ad fugit aspernatur quia nemo asperiores modi aut numquam ipsam iusto quas quo atque voluptas esse alias sit tempora earum inventore sunt. Blanditiis qui doloremque, soluta voluptate corporis eligendi ipsa accusantium, molestiae assumenda quidem molestias.</p>
                         </div>
-                        
-                    </section>
+                    </aside>
                     <section class="middle">
                         <div class="content">
                             <h3>Lorem.</h3>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore doloribus hic deleniti omnis beatae corporis. Nam delectus numquam facere iste eveniet harum deserunt porro voluptate adipisci reprehenderit ipsa ut quos quisquam molestiae alias obcaecati, quam inventore sed non. Sed ea suscipit officia, deserunt doloremque facilis distinctio doloribus enim ad beatae animi assumenda voluptate fugit ab, similique, amet a autem pariatur? Illo sit nisi quia perspiciatis est vitae animi omnis voluptates repudiandae numquam nam aliquid, itaque minus libero sequi reprehenderit cupiditate enim placeat! Libero earum a deleniti vel! Error omnis dolores voluptatibus voluptate praesentium ratione, ex soluta veniam non ipsam illo fugit, quaerat voluptas repellendus minus rem in sunt iure adipisci. Vero consequuntur delectus molestiae error facilis nisi magnam. Aliquam harum, praesentium et eius voluptate fugit nostrum aut provident placeat molestias laborum quae earum! Ea, perspiciatis est, enim ex voluptates impedit iure molestias corporis, ipsum incidunt deserunt. Consequatur hic ad ducimus?</p>
                         </div>
                     </section>
-                    <section class="right">
+                    <aside class="right">
                         <div class="content">
                             <h3>Lorem.</h3>
                             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorum harum illo sint enim nisi amet ratione sed, voluptate quae recusandae ullam repudiandae, incidunt id porro asperiores! Deserunt magnam, rem vero dolorem delectus odio ullam libero, magni tenetur itaque illo voluptatibus optio quisquam debitis. Vel iure aut recusandae libero voluptates rerum voluptatibus odio veritatis. Vel nemo eius labore nam expedita sed.</p>
                         </div>
-                    </section>
+                    </aside>
                 </div>
             </main>
             <!-- /sezione principale -->
