--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                     </div>
                 </div>
             </div>
-             <!-- /banner -->
+            <!-- /banner -->
             <!-- /intestazione della pagina -->
 
             <!-- sezione principale -->
@@ -77,9 +77,7 @@
             <footer>
                 <p>Designed with <span>&hearts;</span>
             </footer>
-            <!-- footer -->
+            <!-- /footer -->
         </div>
-        
-        
     </body>
 </html>
